@@ -124,9 +124,9 @@ opt.--batch=enable batch mode (non-interactive).
 opt.--code=clone given code repository containing a settings folder into workspaces so that settings can be committed alongside code changes.
 opt.--debug=enable debug logging.
 opt.--force=enable force mode.
-opt.--force-plugins=enable force plugins.
-opt.--force-pull=enable force pull.
-opt.--force-repositories=enable force repositories.
+opt.--force-plugins=force plugin (re)installation.
+opt.--force-pull=force pull of settings even for code repository.
+opt.--force-repositories=force setup of repositories to even clone inactive and pull existing ones.
 opt.--locale=the locale (e.g. '--locale=de' for German language).
 opt.--offline=enable offline mode (skip updates or git pull, fail downloads or git clone).
 opt.--quiet=disable info logging (only log success, warning or error).
