@@ -124,9 +124,9 @@ opt.--batch=Aktiviert den Batch-Modus (nicht-interaktive Stapelverarbeitung).
 opt.--code=Git-Repository sowohl als Code- als auch als Settings-Repository verwenden.
 opt.--debug=Aktiviert Debug-Ausgaben (Fehleranalyse).
 opt.--force=Aktiviert den Force-Modus (Erzwingen).
-opt.--force-plugins=Aktiviert force plugins.
-opt.--force-pull=Aktiviert force pull.
-opt.--force-repositories=Aktiviert force repositories.
+opt.--force-plugins=Erzwingt die (Re)Installation von Plugins.
+opt.--force-pull=Erzwingt einen Pull der settings auch im Fall eines Code-Repositories.
+opt.--force-repositories=Erzwingt das Setup von Repositories um auch Inaktive zu clonen oder Existierende zu pullen.
 opt.--locale=Die Spracheinstellungen (z.B. '--locale=en' für Englisch).
 opt.--offline=Aktiviert den Offline-Modus (Überspringt Aktualisierungen oder git pull, schlägt fehl bei Downloads or git clone).
 opt.--quiet=Deaktiviert Info Logging ( nur success, warning und error).
