@@ -6,6 +6,7 @@ This file documents all notable changes to https://github.com/devonfw/IDEasy[IDE
 
 Release with new features and bugfixes:
 
+* https://github.com/devonfw/IDEasy/issues/1007[#1007]: Consider explicit option flags instead of overusing force mode
 * https://github.com/devonfw/IDEasy/issues/951[#951]: Fix text coloring in native cmd and powershell terminals
 * https://github.com/devonfw/IDEasy/issues/1202[#1202]: IDEasy can not reset urls on WSL
 * https://github.com/devonfw/IDEasy/issues/692[#692]: "Latest" version of Docker causes installation problems
